--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-PyMySQL==0.6.2
 aniso8601==0.83
+beautifulsoup4==4.3.2
 lxml==3.3.5
 mock==1.0.1
 progress==1.2
+pymediainfo==1.4.0
 pyzmq==14.3.1
 requests==2.2.1
 wsgiref==0.1.2
+
